kubernetes/unicorn-website-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: unicorn-website
  name: unicorn-website
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: unicorn-website
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unicorn-website
    spec:
      containers:
      - image: 114805761158.dkr.ecr.us-east-1.amazonaws.com/unicorn-website:latest
        imagePullPolicy: Always
        name: unicorn-website
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          capabilities:
            drop:
            - NET_RAW

---
# Kubernetes Service template for LoadBalancer services
apiVersion: v1
kind: Service
metadata:
  name: unicorn-website
  namespace: default
  labels:
    app.kubernetes.io/name: unicorn-website
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app.kubernetes.io/name: unicorn-website
