kubernetes/unicorn-alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unicorn-website-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:114805761158:certificate/9827bff9-7ae3-4699-af82-3db304b2c3e8
    alb.ingress.kubernetes.io/tags: Environment=production,Project=unicorn-website
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ingressClassName: alb
  rules:
  - host: eksawsweek2.cloudopsinsights.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unicorn-website-service
            port:
              number: 80
